methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:-9: error: not found: value isFacingTrail
			if (isFacingTrail()) {
                            ^SlugTracking:4: error: Boolean(true) does not take parameters
def isFacingTrail():Boolean = true {
                                   ^SlugTracking:2: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime31.SlugTracking'
override def run() {
             ^