methods.slug.SlugTracking.scala.code
override def run() {
  
def isFacingTrail():Boolean = true {
  	if (isFacingWall()) {
      return false
    }
    forward()
  	if (getGroundColor()==Color.green) {
      return true
    } else {
      return false
    }
  	backward()
}
  
while (!isOverBaggle()) {
	while (!isFacingTrail()) {
  	left()
  }
  forward()
}
pickupBaggle()
}